--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="greeting__container">
-  <img routerLink="/profile" routerLinkActive="active" class="profilepicdefault" src="../../assets/small_default_profile.png" mat-card-image>
+  <img routerLink="/profile" routerLinkActive="active" class="profilepicdefault" src="./assets/small_default_profile.png" mat-card-image>
     <div class="greeting">
-    <h1>Welkom bij klusplus <img class="icon" src="../../assets/hamer.png"> </h1>
+    <h1>Welkom bij klusplus <img class="icon" src="./assets/hamer.png"> </h1>
   </div>
   <button routerLink='/request-reparation' routerLinkActive="active" id="Reparation" mat-raised-button>Reparatie aanvragen</button><br>
   <button routerLink='/do-it-yourself' routerLinkActive="active" id="DIY" mat-raised-button>Doe-het-zelftips</button><br>
